# deepsklearn

./: .gitignore  README.md  pyproject.toml
apps/: app.py  run_app.py
datasets/: __init__.py  streaming_dataset.py
deepsklearn/activations/: activation_registry.py
deepsklearn/config/: aliexpress_NL_config.py  amazon_beauty_config.py  constants.py  criteo_feature_column.json  criteo_label_column.json
deepsklearn/datasets/: __init__.py  item2vec_dataset.py  mtl_dataset.py  retrieval_dataset.py  seq_dataset.py
deepsklearn/initializations/: initialization_functions.py
deepsklearn/layers/: __init__.py  attention.py
deepsklearn/metrics/: __init__.py  metric_functions.py  metric_registry.py  metrics.py
deepsklearn/models/: __init__.py  models_registry.py
deepsklearn/trainer/: __init__.py  (+3 more)
examples/: train_afm.py  train_autoint.py  train_avg_pooling.py  train_bert4rec.py  train_bst.py  train_dcn.py  train_dcnv2.py  train_deepfm.py  train_din.py  train_dlrm.py  train_dnn.py  train_esmm_mtl.py  train_fm.py  train_hstu.py  train_item2vec.py  train_itemcf.py  train_lr.py  train_mmoe_mtl.py  train_nfm.py  train_ple_mtl.py  train_pnn.py  train_sasrec.py  train_shared_bottom_mtl.py  train_swing.py  train_widedeep.py  train_youtubednn.py
features/: __init__.py  base.py  build_processor.py  feature_pipeline.py  processors.py  registry.py
scripts/: train_non_sequence.py
tests/: testFeaturePipeline.py  test_item2vec_dataset.py  test_metrics.py  test_mtl_dataset.py  test_seq_data.py  test_streaming_dataset.py
training/: train.py
utils/: __init__.py  log_utils.py
(+12 files in other folders)
