[project]
name = "deepsklearn"
version = "0.1.0"
description = "A sklearn-style deep learning framework with unified API"
authors = [
    {name = "guopan.jin",email='guopan.jin@outlook.com'}
]

dependencies = [
    "torch",
    "numpy"
]
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["deepsklearn"]
